_etc/gateway/03.INGRESSROUTE/003.kubernetes-ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: kubernetes-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
    - websecure
  #  - web
  routes:
    - kind: Rule
      match: PathPrefix(`/api/kubernetes`) && Host(`console.tmaxcloud.org`)
      # match: PathPrefix(`/api/kubernetes`)
      priority: 100
      middlewares:
        - name: jwt-decode-auth@file
        - name: kubernetes-stripprefix
          namespace: api-gateway-system
      services:
        - kind: Service
          name: kubernetes
          namespace: default
          port: https
          scheme: https
          serversTransport: insecure-transport
  tls: {} # use default tls
#  tls:
#    secretName: api-gateway-server-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubernetes-stripprefix
  namespace: api-gateway-system
spec:
  stripPrefix:
    prefixes:
      - "/api/kubernetes"
    forceSlash: true
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: ServersTransport
# metadata:
#   name: insecure-transport
#   namespace: api-gateway-system
# spec:
#   insecureSkipVerify: true
