_etc/gateway/03.INGRESSROUTE/006.k8s-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-bu: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: k8s-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
  - k8s
  routes:
  - kind: Rule
    match: PathPrefix(`/`) && Host(`192.168.9.155.nip.io`)
    services:
    - name: kubernetes
      namespace: default
      port: https
      scheme: https
      serversTransport: insecure@file
  tls: {}
---
